fix the phone number alignment in data verify page

--- a/ZEMOD_DSHB/src/nrg/module/dashboard/asset/css/DashboardCustomerdataVerification.view.less
+++ b/ZEMOD_DSHB/src/nrg/module/dashboard/asset/css/DashboardCustomerdataVerification.view.less
@@ -599,3 +599,7 @@
         line-height: 23px;
     }
 }
+// Phone number alignment
+.nrgDashboard-cusDataVerify-phoneNumAlign {
+    width: 65px;
+}
